# Univ_mac

./: .gitignore  2025_Fall_KNU 2393d362492880e7ba90c6c343515529.md  CLAUDE.md  GEMINI.md  README.md
C_language/: CLAUDE.md  CMakeLists.txt  GEMINI.md  hw1_2022110327  hw1_2022110327.c  hw2_2022110327  hw2_2022110327.c  practice  practice.c  practice.py
C_language/hw1_2022110327.dSYM/Contents/: Info.plist
C_language/hw1_2022110327.dSYM/Contents/Resources/DWARF/: hw1_2022110327
C_language/hw1_2022110327.dSYM/Contents/Resources/Relocations/aarch64/: hw1_2022110327.yml
C_language/practice.dSYM/Contents/Resources/DWARF/: practice
C_language/practice.dSYM/Contents/Resources/Relocations/aarch64/: practice.yml
Data_Structures/: CLAUDE.md  CMakeLists.txt  hw1_2022110327.c  hw2  hw2_2022110327  hw2_2022110327.c  hw3_2022110327  hw3_2022110327.c  hw3_test_error.txt  hw3_test_stable.txt  prac  prac.c  professor.md
Timetable/: 2025학년도 2학기 교양, 교직, 일반선택과목 수업시간표(7.16.).xlsx  2025학년도 2학기 전공과목 수업시간표_(7.16.).xlsx
